<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1d2c"
    android:contentInsetStart="0dp"
    android:contentInsetEnd="0dp"
    android:orientation="vertical"
    >
    <include layout="@layout/headingbar_layout"
        android:layout_height="50dp"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="RedundantNamespace">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/nh_c_vi_t"
                    android:textAllCaps="false"
                    android:layout_margin="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button2"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintWidth_percent="0.3"
                    android:background="@drawable/button_bg2"
                    app:layout_constraintHeight_percent="0.1"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_bg2"
                    android:text="@string/nh_c_us_uk"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.1"
                    app:layout_constraintStart_toEndOf="@+id/button1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3"
                    tools:ignore="TextSizeCheck" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/edm"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button1"
                    app:layout_constraintEnd_toStartOf="@+id/button4"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintHeight_percent="0.1"/>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/tr_t_nh"
                    android:layout_margin="5dp"
                    android:textAllCaps="false"
                    android:background="@drawable/button_bg"
                    app:layout_constraintStart_toEndOf="@+id/button3"
                    app:layout_constraintTop_toBottomOf="@+id/button2"
                    app:layout_constraintEnd_toStartOf="@+id/button5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintHeight_percent="0.1"/>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/kh_c"
                    android:textAllCaps="false"
                    android:layout_margin="5dp"
                    app:layout_constraintStart_toEndOf="@+id/button4"
                    app:layout_constraintTop_toBottomOf="@+id/button2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintHeight_percent="0.1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:background="@drawable/listview_bg" />
        <!-- Thanh công cụ -->
        <include layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>



</LinearLayout>